Add Firebase distribution 11

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and Deploy APK
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
@@ -15,13 +15,11 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: 11  # Replace with the desired Java version, e.g., 8
+          distribution: 'adopt'  # Specify the distribution, e.g., adopt, openj9, temurin
 
       - name: Build APK
         run: ./gradlew assembleDebug
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: app/build/outputs/apk/debug/app-debug.apk
+      - name: Move APK to Desired Location
+        run: mv app/build/outputs/apk/debug/app-debug.apk
