--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,20 +6,20 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: 11  # Replace with the desired Java version, e.g., 8
           distribution: 'adopt'  # Specify the distribution, e.g., adopt, openj9, temurin
 
       - name: Build APK
-        run: ./gradlew assembleDebug appDistributionUploadDebug
+        run: .\gradlew assembleDebug
 
       - name: Move APK to Desired Location
         run: mv app/build/outputs/apk/debug/app-debug.apk
