--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
         run: .\gradlew assembleDebug
 
       - name: Move APK to Desired Location
-        run: mv app/build/outputs/apk/debug/app-debug.apk
+        run: mv app/src/debug/app-debug.apk
