--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,9 @@ jobs:
       - name: Build APK
         run: .\gradlew assembleDebug
 
-      - name: Move APK to Desired Location
-        run: mv app/src/debug/app-debug.apk
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: app/build/outputs/apk/debug/app-debug.apk
+
