Build and Deploy APK 8

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Upload Bundle
         uses: actions/upload-artifact@v3
         with:
-          name: signed_app_bundle
+          name: test_app
           path: app/build/outputs/apk/debug/app-debug.apk
 
