--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
           server_port: 465
           username: niraj07.k@gmail.com
           password: ${{ secrets.GMAIL_TOKEN }}
+          from: niraj07.k@gmail.com
           subject: APK Build Notification
           body: |
             Here is the link to download the APK:
