--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           server_address: smtp.gmail.com
           server_port: 465
-          username: Niraj
+          username: niraj07.k@gmail.com
           password: ${{ secrets.GMAIL_PASSWORD }}
           from: niraj07.k@gmail.com
           subject: APK Build Notification
