--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           server_address: smtp.gmail.com
           server_port: 465
           username: niraj07.k@gmail.com
-          password: ${{ secrets.GMAIL_PASSWORD }}
+          password: 'Ni121034@'
           from: niraj07.k@gmail.com
           subject: APK Build Notification
           body: |
