--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Build APK
         run: .\gradlew assembleDebug
 
+      - name: Set up Git
+        run: |
+          git config --global user.name "Niraj0107"
+          git config --global user.email "niraj.kumar@tissatech.com"
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -33,6 +38,8 @@ jobs:
           release_name: Release v1.0.0  # Replace with your desired release name
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload APK
         id: upload_apk
@@ -42,6 +49,8 @@ jobs:
           asset_path: app/build/outputs/apk/debug/app-debug.apk
           asset_name: app-debug.apk
           asset_content_type: application/vnd.android.package-archive
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Send Email Notification
         uses: dawidd6/action-send-mail@v3
