--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: v1.0.1 v1.0.6  # Replace with your desired tag name
+          tag_name: v1.0.1  # Replace with your desired tag name
           release_name: Release v1.0.6  # Replace with your desired release name
           draft: false
           prerelease: false
