--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,7 @@ jobs:
         uses: actions/create-release@v1
         with:
           tag_name: v1.1.6 # Replace with your desired tag name 
-	 release_name: Release v1.1.6  # Replace with your desired release name
-          draft: false
+	  release_name: Release v1.1.6 # Replace with your desired release namedraft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
