--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Deploy APK
 on:
   push:
     branches:
-      - '.github/workflows/deploy.yml'
+      - '.github/workflows/build.yml'
 
 jobs:
   build:
