--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: v1.0.5  # Replace with your desired tag name
-          release_name: Release v1.0.5  # Replace with your desired release name
+          tag_name: 1.1.6# Replace with your desired release name
           draft: false
           prerelease: false
         env:
