--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,8 +62,8 @@ jobs:
 
         with:
 
-          tag_name: 1.0.0  # Replace with your desired tag name
-          release_name: Release 1.0.0  # Replace with your desired release name
+          tag_name: v1.0.1  # Replace with your desired tag name
+          release_name: Release v1.0.1  # Replace with your desired release name
           draft: false
 
           prerelease: false
